# document-graph

./: .eosproj  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  document.abi  notes.md
dgraph/: mutations.graphql
docgraph/: content_group.go  content_item.go  contract_test.go  docgraph_test.go  document.go  document_graph.go  document_test.go  edge.go  edge_test.go  environment_test.go  go.mod  go.sum  graph.go  graph_test.go  helpers_test.go  nodeos.sh  types.go  types_test.go  utils.go
docgraph/examples/: contribution.json
docs/: docs.abi
document/: document.abi
go/: go.mod  go.sum  types_test.go
go-docgraph/: contract_test.go  go.sum  testify_test.go  types.go  types_test.go
include/: docs.hpp  document.hpp  document_graph.hpp
include/document_graph/: content.hpp  content_group.hpp  content_wrapper.hpp  document.hpp  document_graph.hpp  edge.hpp  hash_document.hpp  util.hpp
include/logger/: boost_current_function.hpp  logger.hpp
js/: .eslintrc.js  create.js  index.js  listen-hyperion.js  listen-spectrum.js  package.json  populate.js  random.json  sample.js
js/model/: Document.js  Document.test.js  index.js
js/service/: DGraph.js  DGraph.test.js  index.js
js/util/: Util.js  index.js
src/: CMakeLists.txt  accessors.cpp  docs.cpp  document.cpp  document_graph.cpp  edges.cpp
src/document_graph/: accessors.cpp  content.cpp  content_group.cpp  content_wrapper.cpp  creators.cpp  document.cpp  document_graph.cpp  edge.cpp  edges.cpp  hash_document.cpp  util.cpp
src/logger/: logger.cpp
test/: document.test.js  package.json
(+15 files in other folders)
